<resources>
    <string name="app_name">MyFizzBuzz</string>
    <string name="string1">String 1 : </string>
    <string name="string2">String 2 : </string>
    <string name="int1">Int 1 : </string>
    <string name="int2">Int 2 : </string>
    <string name="limit">Limit :</string>
    <string name="valider">Valider</string>
    <string name="champ_manquant">Un champ n\'est pas rempli, veuillez corriger</string>
    <string name="limit_depasse">Vous avez dépassé la limite</string>
    <string name="infos_saisie">Vous devez remplir tous les champs pour valider et mettre des nombres inférieurs à 1 000 000</string>
    <string name="saisie_a_refaire">Veuillez remplir les données comme indiqué</string>
    <string name="calcul_en_cours">Calcul en cours</string>
</resources>